# Restaurant-Management

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  wt_config.xml
model/: app_model.yaml
resources/: style.css
sql/: README.md  schema.sql  seed_chinese.sql  seed_sandwich.sql  seed_thai.sql
src/: main.cpp
src/models/: Dto.h  Models.h
src/services/: ApiService.cpp  ApiService.h  IApiService.h  LocalApiService.cpp  LocalApiService.h  RestApiService.cpp  RestApiService.h  SiteConfig.cpp  SiteConfig.h
src/ui/: RestaurantApp.cpp  RestaurantApp.h
src/widgets/: FrontDeskView.cpp  FrontDeskView.h  KitchenView.cpp  KitchenView.h  ManagerView.cpp  ManagerView.h  MobileFrontDeskView.cpp  MobileFrontDeskView.h
